# wc

./: README.md  pyproject.toml
ccwc/: counts.py  main.py
