[tool.poetry]
name = "ccwc"
version = "0.1.0"
description = ""
authors = ["Alex Romano <alexromano12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
ccwc = "ccwc.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
